# TFC-NLP-2020.1

./: .gitignore  Código TCC Automático v2.py  Dataset Original.xlsx  README.md  pyproject.toml  resultados.xlsx
Códigos/: Código TCC v7.py  Código TCC v8.py  Parametros.csv
Datasets/: Dataset Original OneHot.xlsx
code/: main.py  main_generate_plots.py  main_old.py
example_results/: results.csv  results.xlsx
