[tool.poetry]
name = "tfc-nlp-2020.1"
version = "0.1.0"
description = ""
authors = ["Victor De Simone <59988822+vsmoliveira@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
nltk = "^3.7"
scikit-multilearn = "^0.2.0"
spacy = "^3.4.3"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
